--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -10,10 +10,15 @@ edition = "2021"
 
 [dependencies]
 tungstenite = "0.21.0"
-eframe = "0.27.2"
+eframe = { version="0.27.2", features = ["persistence", "glow", "default_fonts"], default_features = false }
 tracing-subscriber = "0.3.18"
 tracing = "0.1.40"
 tangled = { path = "tangled" }
 serde = { version = "1.0.199", features = ["serde_derive"] }
 bitcode = "0.6.0"
 
+[profile.dev]
+opt-level = 1
+
+[profile.release]
+lto = "thin"
