WIP steam networking

--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -18,6 +18,9 @@ serde = { version = "1.0.199", features = ["serde_derive"] }
 bitcode = "0.6.0"
 lz4_flex = { version = "0.11.3", default_features = false, features = ["std"]}
 rand = "0.8.5"
+steamworks = "0.11.0"
+crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
+clipboard = "0.5.0"
 
 [profile.dev]
 opt-level = 1
