--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -21,6 +21,7 @@ rand = "0.8.5"
 steamworks = "0.11.0"
 crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
 clipboard = "0.5.0"
+socket2 = { version = "0.5.7", features = ["all"] }
 
 [profile.dev]
 opt-level = 1
