--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -3,7 +3,7 @@ members = ["tangled"]
 
 [package]
 name = "noita-proxy"
-version = "0.4.1"
+version = "0.5.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -28,6 +28,7 @@ serde_json = "1.0.117"
 thiserror = "1.0.61"
 poll-promise = "0.3.0"
 zip = "1.3.1"
+self-replace = "1.3.7"
 
 [profile.dev]
 opt-level = 1
