--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -29,6 +29,7 @@ thiserror = "1.0.61"
 poll-promise = "0.3.0"
 zip = "1.3.1"
 self-replace = "1.3.7"
+image = { version = "0.25.1", default_features = false, features = ["png"] }
 
 [profile.dev]
 opt-level = 1
