--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -30,6 +30,7 @@ poll-promise = "0.3.0"
 zip = "1.3.1"
 self-replace = "1.3.7"
 image = { version = "0.25.1", default_features = false, features = ["png"] }
+egui_extras = { version = "*", features = ["all_loaders"] }
 
 [profile.dev]
 opt-level = 1
