--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -33,6 +33,7 @@ image = { version = "0.25.1", default_features = false, features = ["png"] }
 egui_extras = { version = "*", features = ["all_loaders"] }
 bytemuck = { version = "1.16.0", features = ["derive"] }
 bincode = "1.3.3"
+rustc-hash = "1.1.0"
 
 [profile.dev]
 opt-level = 1
