--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -3,7 +3,7 @@ members = ["tangled"]
 
 [package]
 name = "noita-proxy"
-version = "0.10.0"
+version = "0.11.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -36,6 +36,7 @@ bincode = "1.3.3"
 rustc-hash = "1.1.0"
 fluent-templates = "0.9.4"
 unic-langid = { version = "0.9.5", features = ["serde"] }
+fluent-bundle = "0.15.3"
 
 [profile.dev]
 opt-level = 1
