--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -29,7 +29,7 @@ thiserror = "1.0.61"
 poll-promise = "0.3.0"
 zip = "1.3.1"
 self-replace = "1.3.7"
-image = { version = "0.25.1", default_features = false, features = ["png"] }
+image = { version = "0.24.9", default_features = false, features = ["png", "webp"] }
 egui_extras = { version = "*", features = ["all_loaders"] }
 bytemuck = { version = "1.16.0", features = ["derive"] }
 bincode = "1.3.3"
