--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -4,7 +4,7 @@ members = ["tangled"]
 [package]
 name = "noita-proxy"
 description = "Noita Entangled Worlds companion app."
-version = "0.11.2"
+version = "0.11.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -42,8 +42,9 @@ fluent-bundle = "0.15.3"
 [profile.dev]
 opt-level = 1
 
-[profile.release]
-lto = "thin"
+[profile.release-lto]
+inherits = "release"
+lto = "fat"
 
 [profile.release-debug]
 inherits = "release"
