--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -38,6 +38,7 @@ rustc-hash = "1.1.0"
 fluent-templates = "0.9.4"
 unic-langid = { version = "0.9.5", features = ["serde"] }
 fluent-bundle = "0.15.3"
+egui_plot = "0.27.2"
 
 [profile.dev]
 opt-level = 1
