--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -39,6 +39,7 @@ fluent-templates = "0.9.4"
 unic-langid = { version = "0.9.5", features = ["serde"] }
 fluent-bundle = "0.15.3"
 egui_plot = "0.27.2"
+crc = "3.2.1"
 
 [profile.dev]
 opt-level = 1
