--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -4,7 +4,7 @@ members = ["tangled"]
 [package]
 name = "noita-proxy"
 description = "Noita Entangled Worlds companion app."
-version = "0.13.0"
+version = "0.13.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -40,6 +40,9 @@ unic-langid = { version = "0.9.5", features = ["serde"] }
 fluent-bundle = "0.15.3"
 egui_plot = "0.27.2"
 crc = "3.2.1"
+
+[build-dependencies]
+winresource = "0.1.17"
 
 [profile.dev]
 opt-level = 1
