--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -41,6 +41,7 @@ fluent-bundle = "0.15.3"
 egui_plot = "0.27.2"
 crc = "3.2.1"
 argh = "0.1.12"
+shlex = "1.3.0"
 
 [build-dependencies]
 winresource = "0.1.17"
