--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -42,6 +42,7 @@ egui_plot = "0.27.2"
 crc = "3.2.1"
 argh = "0.1.12"
 shlex = "1.3.0"
+quick-xml = { version = "0.36.0", features = ["serialize"] }
 
 [build-dependencies]
 winresource = "0.1.17"
