--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-winit = {version = "*", features = ["default"]}
+winit = {version = "0.29", features = ["default"]}
 eframe = { version="0.28.1", features = ["persistence", "wgpu", "default_fonts"], default-features = false }
 egui-file-dialog = "0.6.0"
 egui_extras = { version = "0.28.1", features = ["all_loaders"] }
@@ -34,7 +34,7 @@ reqwest = { version = "0.12.4", features = ["blocking", "json", "http2", "rustls
 serde_json = "1.0.117"
 thiserror = "1.0.61"
 poll-promise = "0.3.0"
-zip = "1.3.1"
+zip = "2.1.4"
 self-replace = "1.3.7"
 bytemuck = { version = "1.16.0", features = ["derive"] }
 bincode = "1.3.3"
