--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -46,6 +46,7 @@ crc = "3.2.1"
 argh = "0.1.12"
 shlex = "1.3.0"
 quick-xml = { version = "0.36.0", features = ["serialize"] }
+dashmap = "6.0.1"
 
 [build-dependencies]
 winresource = "0.1.17"
