--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -5,14 +5,13 @@ resolver = "2"
 [package]
 name = "noita-proxy"
 description = "Noita Entangled Worlds companion app."
-version = "0.14.3"
+version = "0.14.4"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-winit = {version = "0.29", features = ["default"]}
-eframe = { version="0.28.1", features = ["persistence", "wgpu", "default_fonts"], default-features = false }
+eframe = { version="0.28.1", features = ["persistence", "glow", "default_fonts"], default-features = false }
 egui-file-dialog = "0.6.0"
 egui_extras = { version = "0.28.1", features = ["all_loaders"] }
 egui_plot = "0.28.1"
