Made some stain sync stuff that doesn't work because clients don't get stained for some reason :(

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-    "Lua.runtime.version": "LuaJIT"
+    "Lua.runtime.version": "LuaJIT",
+    "Lua.diagnostics.disable": [
+        "cast-local-type",
+        "param-type-mismatch",
+        "undefined-global",
+        "need-check-nil"
+    ],
+    "Lua.diagnostics.globals": [
+        "wait",
+        "async"
+    ]
 }
