--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -46,6 +46,7 @@ argh = "0.1.12"
 shlex = "1.3.0"
 quick-xml = { version = "0.36.0", features = ["serialize"] }
 dashmap = "6.0.1"
+eyre = "0.6.12"
 
 [build-dependencies]
 winresource = "0.1.17"
