--- a/noita-proxy/tangled/Cargo.toml
+++ b/noita-proxy/tangled/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tangled"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/IntQuant/tangled"
@@ -18,6 +18,11 @@ tracing = "0.1.36"
 dashmap = "6.0.1"
 serde = {features = ["derive"], version = "1.0.142"}
 bincode = "1.3.3"
+quinn = "0.11.5"
+num-bigint = "0.4.6"
+rcgen = "0.13.1"
+thiserror = "1.0.63"
+tokio = "1.40.0"
 
 [dev-dependencies]
 test-log = { version = "0.2.11", default-features = false, features = ["trace"]}
