--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -47,6 +47,7 @@ shlex = "1.3.0"
 quick-xml = { version = "0.36.0", features = ["serialize"] }
 dashmap = "6.0.1"
 eyre = "0.6.12"
+tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
 
 [build-dependencies]
 winresource = "0.1.17"
