--- a/noita-proxy/tangled/Cargo.toml
+++ b/noita-proxy/tangled/Cargo.toml
@@ -17,13 +17,13 @@ crossbeam = "0.8.2"
 tracing = "0.1.36"
 dashmap = "6.0.1"
 serde = {features = ["derive"], version = "1.0.142"}
-bincode = "1.3.3"
 quinn = "0.11.5"
 num-bigint = "0.4.6"
 rcgen = "0.13.1"
 thiserror = "1.0.63"
-tokio = "1.40.0"
+tokio = { version = "1.40.0", features = ["macros", "io-util", "sync"] }
+bitcode = "0.6.3"
 
 [dev-dependencies]
-test-log = { version = "0.2.11", default-features = false, features = ["trace"]}
+test-log = { version = "0.2.16", default-features = false, features = ["trace"]}
 tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}
