dont remove infinite lifetime components on revive, looks like lto and strip work fine

--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -57,6 +57,8 @@ opt-level = 1
 
 [profile.release-lto]
 inherits = "release"
+lto = true
+strip = true
 # Lto seems to be broken for some reason?
 #lto = "thin"
 
