--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -49,6 +49,7 @@ quick-xml = { version = "0.37.0", features = ["serialize"] }
 dashmap = "6.0.1"
 eyre = "0.6.12"
 tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
+tracing-appender = "0.2.3"
 
 [build-dependencies]
 winresource = "0.1.17"
