--- a/ewext/Cargo.toml
+++ b/ewext/Cargo.toml
@@ -17,3 +17,4 @@ backtrace = "0.3.74"
 iced-x86 = "1.21.0"
 noita_api_macro = {path = "noita_api_macro"}
 eyre = "0.6.12"
+noita_api = {path = "noita_api"}
