--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,10 +26,10 @@ jobs:
       
       - name: Build Linux proxy release
         run: cargo build --release
-        working-directory: ./noita_proxy
+        working-directory: ./noita-proxy
       - name: Build Windows proxy release
         run: cargo build --release --target x86_64-pc-windows-gnu
-        working-directory: ./noita_proxy
+        working-directory: ./noita-proxy
 
       - name: Create archives
         run: python scripts/ci_make_archives.py
