--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,8 @@ jobs:
         run: sudo apt-get install -y libclang-dev libgtk-3-dev libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev libxkbcommon-dev libssl-dev gcc-mingw-w64-i686 gcc-mingw-w64
       
       - uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: noita-proxy -> target
       
       - name: Build ewext
         run: cargo build --release --target i686-pc-windows-gnu
