--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,13 +95,21 @@ jobs:
     needs: [build-mod, build-proxy-linux, build-proxy-windows]
 
     steps:
+      - uses: actions/checkout@v4
+        with:  
+          fetch-tags: true
+          # Not actually necessary to checkout anything, but have a single file just in case.
+          sparse-checkout: README.md
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v4
         with:
           merge-multiple: true
       - name: List artifacts
         run: ls -R
+      - name: Get tag message
+        run: git tag -l --format='%(contents)' $(git describe --tags) > release_body.md
       - uses: ncipollo/release-action@v1
         with:
           draft: true
           artifacts: "*.zip"
+          bodyFile: release_body.md
