--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,6 @@
 name: release
 
-on: 
-  push:
-    tags:
-      - v**
+on: [push]
 
 jobs:
   build-mod:
@@ -91,6 +88,7 @@ jobs:
 
   release:
     name: Release
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-22.04
     permissions:
       contents: write
@@ -100,8 +98,6 @@ jobs:
       - uses: actions/checkout@v4
         with:  
           fetch-tags: true
-          # Not actually necessary to checkout anything, but have a single file just in case.
-          sparse-checkout: README.md
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v4
         with:
