Fix ewext crash on starting a new game.

--- a/ewext/Cargo.toml
+++ b/ewext/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib"]
 
 [profile.release]
 lto = true
-strip = false
+strip = true # Not having that causes wine debugger to crash.
 panic = "abort"
 
 [dependencies]
