--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2021"
 
 [dependencies]
 eframe = { version="0.29.1", features = ["glow", "default_fonts"], default-features = false }
-egui-file-dialog = "0.7.0"
+rfd = "0.15.1"
 egui_extras = { version = "0.29.1", features = ["all_loaders"] }
 egui_plot = "0.29.0"
 image = { version = "0.25.1", default-features = false, features = ["png", "webp"] }
