More wip des stuff

--- a/ewext/Cargo.toml
+++ b/ewext/Cargo.toml
@@ -21,6 +21,8 @@ noita_api = {path = "noita_api"}
 shared = {path = "../shared"}
 libloading = "0.8.6"
 rand = "0.8.5"
+rustc-hash = "2.0.0"
+bimap = "0.6.3"
 
 [features]
 #enables cross-compilation on older systems (for example, when compiling on ubuntu 20.04)
