--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -47,6 +47,7 @@ eyre = "0.6.12"
 tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
 tracing-appender = "0.2.3"
 shared = {path = "../shared"}
+rstar = "0.12.2"
 
 [dev-dependencies]
 serial_test = "3.2.0"
