--- a/ewext/noita_api/Cargo.toml
+++ b/ewext/noita_api/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 eyre = "0.6.12"
 libloading = "0.8.5"
 noita_api_macro = {path = "../noita_api_macro"}
-strum = { version = "0.26.3", features = ["derive"] }
+shared = {path = "../../shared"}
