--- a/ewext/noita_api/Cargo.toml
+++ b/ewext/noita_api/Cargo.toml
@@ -8,3 +8,4 @@ eyre = "0.6.12"
 libloading = "0.8.5"
 noita_api_macro = {path = "../noita_api_macro"}
 shared = {path = "../../shared"}
+strum = "0.26.3"
