attempt voice chat

--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -49,6 +49,9 @@ tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
 tracing-appender = "0.2.3"
 shared = {path = "../shared"}
 rstar = "0.12.2"
+rodio = "0.20.1"
+cpal = "0.15.3"
+opus = "0.3.0"
 
 [dev-dependencies]
 serial_test = "3.2.0"
