Change runner to earlier windows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,7 @@ jobs:
 
   build-proxy-windows:
     name: Build proxy for windows
-    runs-on: windows-latest
+    runs-on: windows-2019
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
