--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -56,6 +56,9 @@ rubato = "0.16.1"
 directories = "6.0.0"
 #fundsp = {version = "0.20.0", default-features = false, features = ["std"]}
 
+[target.'cfg(windows)'.dependencies]
+winapi="0.3.9"
+
 [dev-dependencies]
 serial_test = "3.2.0"
 
