--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,7 +109,7 @@ jobs:
     runs-on: ubuntu-22.04
     permissions:
       contents: write
-    needs: [build-mod, build-proxy-linux, build-proxy-windows, build-proxy-macos]
+    needs: [build-mod, build-proxy-linux, build-proxy-windows]
 
     steps:
       - uses: actions/checkout@v4
