--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,7 @@
         "cast-local-type",
         "param-type-mismatch",
         "undefined-global",
-        "need-check-nil",
-        "lowercase-global",
-        "redundant-parameter",
-        "missing-fields"
+        "need-check-nil"
     ],
     "Lua.diagnostics.globals": [
         "wait",
