--- a/ewext/noita_api/Cargo.toml
+++ b/ewext/noita_api/Cargo.toml
@@ -9,3 +9,4 @@ libloading = "0.8.5"
 noita_api_macro = {path = "../noita_api_macro"}
 shared = {path = "../../shared"}
 base64 = "0.22.1"
+rustc-hash = "2.0.0"
