--- a/ewext/noita_api/Cargo.toml
+++ b/ewext/noita_api/Cargo.toml
@@ -10,3 +10,4 @@ noita_api_macro = {path = "../noita_api_macro"}
 shared = {path = "../../shared"}
 base64 = "0.22.1"
 rustc-hash = "2.0.0"
+smallvec = "1.15.1"
