--- a/ewext/Cargo.toml
+++ b/ewext/Cargo.toml
@@ -19,9 +19,8 @@ opt-level = 3
 [dependencies]
 backtrace = "0.3.74"
 iced-x86 = "1.21.0"
-noita_api_macro = {path = "noita_api_macro"}
 eyre = "0.6.12"
-noita_api = {path = "noita_api"}
+noita_api = {path = "../noita_api"}
 shared = {path = "../shared"}
 libloading = "0.8.6"
 rand = "0.9.0"
