--- a/blob_guy/Cargo.toml
+++ b/blob_guy/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [lib]
-crate-type = ["cdylib"]
+#crate-type = ["cdylib"]
+crate-type = ["rlib"]
 
 [profile.release]
 lto = true
@@ -20,3 +21,8 @@ noita_api = {path = "../noita_api"}
 eyre = "0.6.12"
 libloading = "0.8.8"
 smallvec = "1.15.1"
+rustc-hash = "2.1.1"
+
+[dev-dependencies]
+rupl = {git = "https://github.com/bgkillas/rupl.git", default-features = false, features = ["egui"] }
+eframe = "0.31.1"
