--- a/blob_guy/Cargo.toml
+++ b/blob_guy/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [lib]
-crate-type = ["cdylib"]
-#crate-type = ["rlib"]
+#crate-type = ["cdylib"]
+crate-type = ["rlib"]
 
 [profile.release]
 lto = true
