--- a/blob_guy/Cargo.toml
+++ b/blob_guy/Cargo.toml
@@ -23,6 +23,7 @@ eyre = "0.6.12"
 libloading = "0.8.8"
 smallvec = "1.15.1"
 rustc-hash = "2.1.1"
+rayon = "1.10.0"
 
 [dev-dependencies]
 rupl = {git = "https://github.com/bgkillas/rupl.git", default-features = false, features = ["egui"] }
