--- a/blob_guy/Cargo.toml
+++ b/blob_guy/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [lib]
-#crate-type = ["cdylib"]
-crate-type = ["rlib"]
+crate-type = ["cdylib"]
+#crate-type = ["rlib"]
 
 [profile.release]
 lto = true
@@ -15,6 +15,7 @@ split-debuginfo = "packed"
 incremental=true
 codegen-units=1
 opt-level = 3
+overflow-checks = true
 
 [dependencies]
 noita_api = {path = "../noita_api"}
