--- a/ewext/Cargo.toml
+++ b/ewext/Cargo.toml
@@ -25,6 +25,7 @@ libloading = "0.8.6"
 rand = "0.9.0"
 rustc-hash = "2.0.0"
 bimap = "0.6.3"
+rayon = "1.10.0"
 
 [features]
 #enables cross-compilation on older systems (for example, when compiling on ubuntu 20.04)
