--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -56,7 +56,7 @@ directories = "6.0.0"
 #fundsp = {version = "0.20.0", default-features = false, features = ["std"]}
 
 [target.'cfg(windows)'.dependencies]
-winapi="0.3.9"
+winapi={version="0.3.9",features = ["wincon"]}
 
 [dev-dependencies]
 serial_test = "3.2.0"
