--- a/noita-proxy/Cargo.toml
+++ b/noita-proxy/Cargo.toml
@@ -1,7 +1,3 @@
-[workspace]
-members = ["tangled"]
-resolver = "2"
-
 [package]
 name = "noita-proxy"
 description = "Noita Entangled Worlds proxy application."
@@ -11,32 +7,32 @@ edition = "2024"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-eframe = { version= "0.32.1", features = ["glow", "default_fonts", "wayland", "x11"], default-features = false }
+eframe = { version= "0.33.0", features = ["glow", "default_fonts", "wayland", "x11"], default-features = false }
 rfd = "0.15.4"
-egui_extras = { version = "0.32.1", features = ["all_loaders"] }
+egui_extras = { version = "0.33.0", features = ["all_loaders"] }
 #egui_plot = "0.29.0"
-image = { version = "0.25.6", default-features = false, features = ["png", "webp"] }
+image = { version = "0.25.8", default-features = false, features = ["png", "webp"] }
 
-wide = "0.7.33"
+wide = "0.8.1"
 rayon = "1.11.0"
 ron = "0.11.0"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 tracing = "0.1.41"
-tangled = { path = "tangled" }
-serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
+tangled = "0.5.0"
+serde = { version = "1.0.228", features = ["serde_derive", "derive"] }
 bitcode = "0.6.7"
 lz4_flex = { version = "0.11.5", default-features = false, features = ["std"]}
 rand = "0.9.2"
 steamworks = "0.11.0"
 crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
 arboard = { version = "3.6.1", features = ["wayland-data-control"]}
-socket2 = { version = "0.6.0", features = ["all"] }
-reqwest = { version = "0.12.23", features = ["blocking", "json"]}
+socket2 = { version = "0.6.1", features = ["all"] }
+reqwest = { version = "0.12.24", features = ["blocking", "json"]}
 poll-promise = "0.3.0"
-zip = "4.5.0"
+zip = "6.0.0"
 self-replace = "1.5.0"
 rustc-hash = "2.1.1"
-fluent-templates = "0.13.1"
+fluent-templates = "0.13.2"
 unic-langid = { version = "0.9.6", features = ["serde"] }
 fluent-bundle = "0.16.0"
 argh = "0.1.13"
@@ -44,7 +40,7 @@ shlex = "1.3.0"
 quick-xml = { version = "0.38.3", features = ["serialize"] }
 dashmap = "6.1.0"
 eyre = "0.6.12"
-tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
 tracing-appender = "0.2.3"
 shared = {path = "../shared"}
 rstar = "0.12.2"
