Attempt to track allocations that doesn't actually work cuz I can't get it loaded

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,6 @@
     "rust-analyzer.linkedProjects": [
         "ewext/Cargo.toml",
         "noita-proxy/Cargo.toml",
+        "extra/malloc_probe/Cargo.toml",
     ]
 }
