--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           targets: i686-pc-windows-gnu
           components: clippy, rustfmt
+          toolchain: 'nightly'
 
       - uses: Swatinem/rust-cache@v2
         with:
