--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,8 +72,8 @@ jobs:
         with:
           workspaces: noita-proxy -> target
 
-      - name: add cmake to macos for building cargo crates
-        run: brew install cmake
+      - name: add cmake to flag for building lower version of cmake 
+        run: export CMAKE_POLICY_VERSION_MINIMUM=3.5
       - name: Update cargo packages and Build Macos proxy release
         run: cargo update && cargo build --release
         working-directory: ./noita-proxy
