--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,10 +72,8 @@ jobs:
         with:
           workspaces: noita-proxy -> target
 
-      - name: add cmake to flag for building lower version of cmake 
-        run: export CMAKE_POLICY_VERSION_MINIMUM=3.5
       - name: Update cargo packages and Build Macos proxy release
-        run: cargo update && cargo build --release
+        run: export CMAKE_POLICY_VERSION_MINIMUM=3.5 && cargo update && cargo build --release
         working-directory: ./noita-proxy
 
       - name: Create archives
